# ResendDesk

./: .gitignore  CI.MD  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-release.yml
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
