[package]
name = "resend-desk"
version = "0.3.1"
description = "A focused Resend desktop client"
authors = ["UF4"]
license = "GPL-3.0-only"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "resend_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
winreg = "0.55"
